Bug 259039 - Wide-layout attachments: Fix baseline computation, it shouldn't drift at each re-layout
Summary: Wide-layout attachments: Fix baseline computation, it shouldn't drift at each...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: HTML Editing (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Gerald Squelart
URL:
Keywords: InRadar
Depends on: 258868
Blocks:
  Show dependency treegraph
 
Reported: 2023-07-09 18:54 PDT by Gerald Squelart
Modified: 2023-07-09 23:57 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Squelart 2023-07-09 18:54:49 PDT
Bug 258868 introduced a baseline computation for wide-layout attachments. Unfortunately it can drift at every layout, I'm assuming because the `renderRect`s rely on the baseline, which then gets modified, changing the next `renderRect`a.
Comment 1 Radar WebKit Bug Importer 2023-07-09 18:55:11 PDT
<rdar://problem/111991128>
Comment 2 Gerald Squelart 2023-07-09 19:02:25 PDT
Pull request: https://github.com/WebKit/WebKit/pull/15680
Comment 3 EWS 2023-07-09 23:57:35 PDT
Committed 265894@main (28021b9b53fe): <https://commits.webkit.org/265894@main>

Reviewed commits have been landed. Closing PR #15680 and removing active labels.