Cherry-pick 28021b9b53fe. rdar://problem/111991128

Wide-layout attachments: Fix baseline computation
    https://bugs.webkit.org/show_bug.cgi?id=259039
    rdar://problem/111991128

    Reviewed by Tim Nguyen.

    The previous computation used `renderRect`s, which relied on the baseline, modifying the baseline again
    and again.
    Instead, assume that the image is vertically centred, so it's just a matter of adding half-heights to find
    the bottom of that image. (Fallback to the full attachment height alone in case the inner element doesn't
    have its height yet.)

    * LayoutTests/fast/attachment/mac/wide-attachment-image-controls-basic-expected.txt:
    * LayoutTests/platform/ios-wk2/fast/attachment/cocoa/wide-attachment-rendering-expected.txt:
    * LayoutTests/platform/mac-wk2/fast/attachment/cocoa/wide-attachment-rendering-expected.txt:
    * Source/WebCore/rendering/RenderAttachment.cpp:
    (WebCore::RenderAttachment::baselinePosition const):

    Canonical link: https://commits.webkit.org/265894@main

Identifier: 264815.1072@safari-7616-branch